autoconf check for pkg-config

--- a/common/configure.in
+++ b/common/configure.in
@@ -12,6 +12,7 @@ CXXFLAGS="$CXXFLAGS -Wall"
 AC_CANONICAL_HOST
 AC_PROG_CC
 AC_PROG_CXX
+PKG_PROG_PKG_CONFIG
 AM_PROG_LIBTOOL
 
 AC_CHECK_TOOL(PKG_CONFIG, pkg-config)
