--- a/administrator/mysql-administrator.spec.in
+++ b/administrator/mysql-administrator.spec.in
@@ -31,7 +31,7 @@ It's part of the MySQL Administration Suite.
 %build
 
 # first we have to build the common libs
-cd ../mysql-gui-common
+cd ../common
 %configure --with-commondirname=administrator
 make %{?_smp_mflags}
 
@@ -43,7 +43,7 @@ make %{?_smp_mflags}
 
 %install
 rm -rf %{buildroot}
-cd ../mysql-gui-common
+cd ../common
 make DESTDIR=%{buildroot} install
 
 cd ../%{name}
